Change log of the Gamera MusicStaves Toolkit
============================================

Version 1.3.8, Nov 29 2012
--------------------------

 - no "deprecated sets module" warning

 - StaffFinder_dalitz no longer removes staff groups shorter
   than half the widest width

 - staffrect in get_staffpos now returned correctly for all MusicStaves classes

Version 1.3.7, Oct 27 2011
--------------------------

 - FSF address in all files updated

 - MusicStaves_skeleton prints warning "no staves found" only
   when debug > 0 (can still be queried by accessing property linelist)

 - MusicStaves_linetracking can optionally use a different Stafffinder

 - fixed a number of memory leaks

 - fixed potential crashes in staff finder miyao and staff finder dalitz

 - no longer warning on deprecated sets module

Version 1.3.6, Feb 12 2010
--------------------------

 - distutil's "sdist" mechanism now used for source releases

 - adapted to version 3.2.4 of Gamera, which now includes
   the deformation plugins degrade_kanungo and white_speckles.
   The corresponding deformation plugins in the MusicStaves
   have been renamed to resolve the name conflicts and to
   make their difference to the Gamera plugins clear:

    o degrade_kanungo renamed to degrade_kanungo_parallel

    o add_white_speckles renamed to white_speckles_parallel

 - removed the plugins binary_dilation and binary_erosion,
   which are now part of the Gamera core (dilate_with_structure
   and erode_with_structure)

Version 1.3.5, Dec 04 2009
--------------------------

 - curvature deformation works again

Version 1.3.4, Apr 17 2009
--------------------------

 - choosing files from icon context menu now also works on Windows

Version 1.3.3, Mar 09 2009
--------------------------

 - fixed a number of memory leaks related to PyList_Append increasing
   the reference count of the passed item

Version 1.3.2, Feb 29 2008
--------------------------

 - ported to wxPython 2.8
