@@ -1,6 +1,8 @@
 Change log of the Gamera MusicStaves Toolkit
 ============================================
 
+ - MusicStaves_skeleton does not ignore very wide, but curved staff segments
+
 Version 1.3.8, Nov 29 2012
 --------------------------
 
